# exercise_intro

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/exercise_intro/: __init__.py
tests/: test_exercise_intro.py
